<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_primary_color"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/loginLogo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_margin="25dp"
        android:background="@drawable/gogood_logo"
        android:contentDescription="@string/placeyourlogohere" />

    <EditText
        android:id="@+id/et_inputUserdetail"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/loginLogo"
        android:layout_marginHorizontal="25dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/marko_one"
        android:hint="@string/user_detail"
        android:importantForAutofill="no"

        android:inputType="textPersonName"
        android:textColor="@color/logo_color"
        android:textSize="20sp" />


    <EditText
        android:id="@+id/et_inputPassword"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/et_inputUserdetail"
        android:layout_marginHorizontal="25dp"
        android:layout_marginVertical="10dp"
        android:fontFamily="@font/marko_one"
        android:hint="@string/password"
        android:textColor="@color/logo_color"
        android:importantForAutofill="no"
        android:inputType="textWebPassword"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_inputPassword"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/forgot_password"
        android:textColor="@color/logo_color"
        android:textSize="20sp" />


    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/forgot_password"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/border"
        android:fontFamily="@font/marko_one"
        android:text="@string/login"
        android:textColor="@color/logo_color"
        android:textSize="20sp">


    </Button>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_login"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="25dp"
        android:backgroundTint="@color/teal_200"
        android:clickable="true"
        android:focusable="true"
        android:minHeight="48dp"
        android:text="@string/new_to_home"
        android:textColor="@color/logo_color"
        android:textSize="20sp" />

    <ProgressBar
        android:id="@+id/progressbarOfLagin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        android:layout_marginBottom="40dp" />



</RelativeLayout>